# agentic-kv-bench

./: CLAUDE.md  README.md  STATUS.md  pyproject.toml
agentic_kv_bench/: __init__.py  access.py  baselines.py  cli.py  convert.py  harness.py  oracle.py  policy.py  ports.py  schema.py
agentic_kv_bench/vllm_leg/: __init__.py  agent.py  conformance.py  dollarize.py  drive.py  event_model.py  kv_events.py  mock_stream.py  replay.py  sinks.py  sources.py  subscribe.py  synth.py
docs/: EVAL_PLAN.md  benchmark-spec.md  hint-interface.md  oracle.md  policy-interface.md  trace-conversion.md  trace-schema.md  validation.md
kv_policy_core/: __init__.py  interfaces.py
results/: control-lru-low-pressure.json  first-numbers.json  ladder-01-idle-ttl.json  ladder-01-ttl.json  ladder-02-gdsf.json  ladder-03-walru.json  ladder-04-retired-cache.json  ladder-05-economic.json  ladder-06-continuum.json  retired-cache-pressure-sweep.json  robustness-and-replication.json
scripts/: plot_three_regimes.py
tests/: test_baselines.py  test_cli.py  test_conformance.py  test_convert.py  test_harness.py  test_oracle.py  test_parity.py  test_vllm_leg_agent.py  test_vllm_leg_boxglue.py  test_vllm_leg_dollarize.py  test_vllm_leg_pipeline.py  test_vllm_leg_replay.py  test_vllm_leg_synth.py
