[project]
name = "agentic-kv-bench"
version = "0.0.1"
description = "A benchmark for KV cache eviction/placement policies under agentic workloads."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["kv-policy-core"]

[tool.uv.sources]
kv-policy-core = { path = "../kv-policy-core", editable = true }

[project.optional-dependencies]
# box-only runtime deps for the vLLM leg (subscribe.py, drive.py). Installed on the
# rented GPU box with `uv sync --extra box`; not needed for the local test suite.
box = ["pyzmq>=25", "msgspec>=0.18", "httpx>=0.27"]

[project.scripts]
agentic-kv-bench = "agentic_kv_bench.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_kv_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
